# ExtendedPCA

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: dataset1.csv  main.cpp  pca_star.cpp  pca_star.h
test/: CMakeLists.txt  testExtendedPCA.cpp
